<resources>

    <string name="app_name">Catalog movie</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--search-->
    <string name="title">Search</string>
    <string name="now_playing">Now playing</string>
    <string name="upcoming">Upcoming</string>

    <string name="overview">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="title_movie">title</string>
    <string name="share">Share</string>
    <string name="detail">Detail</string>

    <string name="share_string">Lets watch new movie...</string>
    <string name="share_image_url">Image Shared..</string>
    <string name="home">Home</string>
    <string name="preferences">Preferences</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>

    <string name="favourite_added">Added this movie to favourite</string>
    <string name="favourite_remove">remove this movie in favourite</string>
    <string name="favourite_btn">Lets see..</string>
    <string name="not_ready_message">Sorry this feature is not ready!</string>
    <string name="favourite_msg">Your favourite</string>


</resources>
